# Auction

./: CMakeLists.txt
src/: Auction.cpp  Auction.hpp  Bid.cpp  Bid.hpp  Evaluator.cpp  Evaluator.hpp  User.cpp  User.hpp
tests/: test-evaluator.cpp
